--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_slidebar_tab.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_slidebar_tab.xml
@@ -3,147 +3,154 @@
 <RelativeLayout
     android:id="@+id/relative"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="700px"
+    android:layout_width="690px"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
-    android:background="@drawable/background_info_tile"
-    android:layout_marginBottom="15px"
     android:splitMotionEvents="false">
 
-   <RelativeLayout
-       android:id="@+id/relativeLayoutHead"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:layout_marginTop="30px">
-
-       <TextView
-           android:id="@+id/textViewHeadText"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="llllllllllllll"
-           android:textColor="@color/grey_light_v2"
-           android:layout_marginLeft="32px"
-           android:textSize="30px"/>
-       
-       <ImageView
-           android:layout_width="12px"
-           android:layout_height="18px"
-           android:layout_marginRight="36px"
-           android:src="@drawable/arrow_icon_normal"
-           android:layout_alignParentRight="true"/>
-
-   </RelativeLayout>
-
-    <RelativeLayout
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/relativeLayoutHead"
-        android:layout_marginBottom="36px"
-        android:layout_marginTop="38px">
+        android:layout_marginBottom="15px"
+        card_view:cardBackgroundColor="@color/white">
 
-        <TextView
-            android:id="@+id/textViewEmpty"
-            android:layout_width="22px"
-            android:layout_height="wrap_content"
-            android:visibility="gone"/>
-
-        <RelativeLayout
-            android:id="@+id/relativeLayout1"
-            android:layout_toRightOf="@+id/textViewEmpty"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/textView1Value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="lll"
-                android:textColor="@color/black_text_v2"
-                android:layout_marginLeft="32px"
-                android:textSize="30px"/>
-
-            <TextView
-                android:id="@+id/textView1"
-                android:layout_width="450px"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/textView1Value"
-                android:textColor="@color/black_text_v2"
-                android:text="llllllllllllll"
-                android:layout_marginLeft="10px"
-                android:textSize="30px"/>
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/relativeLayout2"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/textViewEmpty"
-            android:layout_marginTop="4px"
-            android:layout_below="@+id/relativeLayout1">
-
-            <TextView
-                android:id="@+id/textView2Value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="lll"
-                android:textColor="@color/black_text_v2"
-                android:layout_marginLeft="32px"
-                android:textSize="30px"/>
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="450px"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/textView2Value"
-                android:text="llllllllllllll"
-                android:textColor="@color/black_text_v2"
-                android:layout_marginLeft="10px"
-                android:textSize="30px"/>
-
-
-        </RelativeLayout>
+            android:orientation="vertical">
 
 
         <RelativeLayout
-            android:layout_width="195px"
+            android:id="@+id/relativeLayoutHead"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="10px"
-            android:gravity="center">
+            android:layout_marginTop="30px">
 
             <TextView
-                android:id="@+id/textViewValue"
+                android:id="@+id/textViewHeadText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:text="70%"
-                android:textColor="@color/red_v2"
-                android:textSize="64px"/>
+                android:layout_marginLeft="24px"
+                android:text="llllllllllllll"
+                android:textColor="@color/grey_light_v2"
+                android:textSize="30px"/>
 
-            <TextView
-                android:id="@+id/textViewValueSub"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@+id/textViewValue"
-                android:text="fulfillment"
-                android:textColor="@color/red_v2"
-                android:textSize="24px"/>
+            <ImageView
+                android:layout_width="12px"
+                android:layout_height="18px"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="40px"
+                android:src="@drawable/arrow_icon_normal"/>
 
         </RelativeLayout>
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="38px"
+            android:layout_marginBottom="26px">
+
+            <TextView
+                android:id="@+id/textViewEmpty"
+                android:layout_width="14px"
+                android:layout_height="wrap_content"
+                android:visibility="gone"/>
+
+            <RelativeLayout
+                android:id="@+id/relativeLayout1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/textViewEmpty">
+
+                <TextView
+                    android:id="@+id/textView1Value"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="24px"
+                    android:text="lll"
+                    android:textColor="@color/black_text_v2"
+                    android:textSize="30px"/>
+
+                <TextView
+                    android:id="@+id/textView1"
+                    android:layout_width="450px"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10px"
+                    android:layout_toRightOf="@+id/textView1Value"
+                    android:text="llllllllllllll"
+                    android:textColor="@color/black_text_v2"
+                    android:textSize="30px"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/relativeLayout2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/relativeLayout1"
+                android:layout_marginTop="4px"
+                android:layout_toRightOf="@+id/textViewEmpty">
+
+                <TextView
+                    android:id="@+id/textView2Value"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="24px"
+                    android:text="lll"
+                    android:textColor="@color/black_text_v2"
+                    android:textSize="30px"/>
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="450px"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10px"
+                    android:layout_toRightOf="@+id/textView2Value"
+                    android:text="llllllllllllll"
+                    android:textColor="@color/black_text_v2"
+                    android:textSize="30px"/>
 
 
-    </RelativeLayout>
+            </RelativeLayout>
 
-    <!--<ImageView-->
-        <!--android:layout_width="700px"-->
-        <!--android:layout_height="3px"-->
-        <!--android:layout_below="@+id/rideHistoryItem"-->
-        <!--android:layout_centerHorizontal="true"-->
-        <!--android:layout_marginTop="24px"-->
-        <!--android:background="@color/menu_black"/>-->
+
+            <RelativeLayout
+                android:layout_width="195px"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="15px"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/textViewValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:text="70%"
+                    android:textColor="@color/red_v2"
+                    android:textSize="64px"/>
+
+                <TextView
+                    android:id="@+id/textViewValueSub"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/textViewValue"
+                    android:layout_centerHorizontal="true"
+                    android:text="fulfillment"
+                    android:textColor="@color/red_v2"
+                    android:textSize="24px"/>
+
+            </RelativeLayout>
+
+
+        </RelativeLayout>
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
 
 
 </RelativeLayout>
