--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -24,8 +24,9 @@
 
 
 
-            <RelativeLayout android:layout_width="match_parent"
-                            android:layout_height="match_parent">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
                 <!-- map layout -->
                 <RelativeLayout
                     android:id="@+id/mapLayout"
