--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
@@ -28,7 +28,7 @@
             android:layout_centerInParent="true"
             android:gravity="center"
             android:text="@string/earnings"
-            android:textColor="@drawable/orange_gradient"
+            android:textColor="@color/red_v2"
             android:textSize="48px"/>
     </RelativeLayout>
 
@@ -112,7 +112,7 @@
                     android:layout_width="40px"
                     android:layout_height="40px"
                     android:layout_alignParentTop="true"
-                    android:background="@color/new_orange">
+                    android:background="@color/transparent">
 
                 </RelativeLayout>
 
@@ -122,16 +122,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="32px"
+                android:gravity="center"
                 android:layout_marginTop="28px">
 
                 <ImageView
                     android:id="@+id/imageViewPrev"
-                    android:layout_width="32px"
-                    android:layout_height="32px"
+                    android:layout_width="23px"
+                    android:layout_height="14px"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="24px"
+                    android:layout_toLeftOf="@+id/textViewInvPeriod"
                     android:rotation="180"
-                    android:src="@drawable/arrow_icon_normal"/>
+                    android:layout_marginRight="60px"
+                    android:src="@drawable/arrow_right_white"/>
 
                 <TextView
                     android:id="@+id/textViewInvPeriod"
@@ -144,12 +146,12 @@
 
                 <ImageView
                     android:id="@+id/imageViewNext"
-                    android:layout_width="32px"
-                    android:layout_height="32px"
-                    android:layout_alignParentRight="true"
+                    android:layout_width="23px"
+                    android:layout_height="14px"
+                    android:layout_toRightOf="@+id/textViewInvPeriod"
+                    android:layout_marginLeft="60px"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="24px"
-                    android:src="@drawable/arrow_icon_normal"/>
+                    android:src="@drawable/arrow_right_white"/>
 
             </RelativeLayout>
 
@@ -171,7 +173,9 @@
                 <RelativeLayout
                     android:id="@+id/relativeLayout1"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="32px"
+                    android:layout_marginRight="32px">
 
                     <TextView
                         android:id="@+id/textViewDayDateVal1"
@@ -194,9 +198,10 @@
 
                     <ImageView
                         android:id="@+id/arrow1"
-                        android:layout_width="32px"
-                        android:layout_height="32px"
+                        android:layout_width="23px"
+                        android:layout_height="14px"
                         android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
                         android:layout_marginRight="4px"
                         android:src="@drawable/arrow_icon_normal"/>
 
@@ -206,7 +211,9 @@
                     android:id="@+id/relativeLayout2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="36px">
+                    android:layout_marginTop="42px"
+                    android:layout_marginLeft="32px"
+                    android:layout_marginRight="32px">
 
                     <TextView
                         android:id="@+id/textViewDayDateVal2"
@@ -229,9 +236,10 @@
 
                     <ImageView
                         android:id="@+id/arrow2"
-                        android:layout_width="32px"
-                        android:layout_height="32px"
+                        android:layout_width="23px"
+                        android:layout_height="14px"
                         android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
                         android:layout_marginRight="4px"
                         android:src="@drawable/arrow_icon_normal"/>
 
@@ -241,7 +249,9 @@
                     android:id="@+id/relativeLayout3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="36px">
+                    android:layout_marginTop="42px"
+                    android:layout_marginLeft="32px"
+                    android:layout_marginRight="32px">
 
                     <TextView
                         android:id="@+id/textViewDayDateVal3"
@@ -264,9 +274,10 @@
 
                     <ImageView
                         android:id="@+id/arrow3"
-                        android:layout_width="32px"
-                        android:layout_height="32px"
+                        android:layout_width="23px"
+                        android:layout_height="14px"
                         android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
                         android:layout_marginRight="4px"
                         android:src="@drawable/arrow_icon_normal"/>
 
@@ -276,7 +287,9 @@
                     android:id="@+id/relativeLayout4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="36px">
+                    android:layout_marginTop="42px"
+                    android:layout_marginLeft="32px"
+                    android:layout_marginRight="32px">
 
                     <TextView
                         android:id="@+id/textViewDayDateVal4"
@@ -299,9 +312,10 @@
 
                     <ImageView
                         android:id="@+id/arrow4"
-                        android:layout_width="32px"
-                        android:layout_height="32px"
+                        android:layout_width="23px"
+                        android:layout_height="14px"
                         android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
                         android:layout_marginRight="4px"
                         android:src="@drawable/arrow_icon_normal"/>
 
@@ -311,7 +325,9 @@
                     android:id="@+id/relativeLayout5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24px"
+                    android:layout_marginTop="42px"
+                    android:layout_marginLeft="32px"
+                    android:layout_marginRight="32px"
                     android:visibility="gone">
 
                     <TextView
@@ -335,8 +351,8 @@
 
                     <ImageView
                         android:id="@+id/arrow5"
-                        android:layout_width="32px"
-                        android:layout_height="32px"
+                        android:layout_width="23px"
+                        android:layout_height="14px"
                         android:layout_alignParentRight="true"
                         android:layout_marginRight="4px"
                         android:src="@drawable/arrow_icon_normal"/>
@@ -358,7 +374,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginBottom="44px"
-                android:layout_marginTop="24px">
+                android:layout_marginTop="24px"
+                android:layout_marginLeft="32px"
+                android:layout_marginRight="32px">
 
                 <TextView
                     android:id="@+id/textViewRideHistory"
@@ -371,8 +389,8 @@
 
 
                 <ImageView
-                    android:layout_width="32px"
-                    android:layout_height="32px"
+                    android:layout_width="23px"
+                    android:layout_height="14px"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="4px"
                     android:src="@drawable/arrow_icon_normal"/>
