--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_daily_details_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_daily_details_new.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/linear"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
@@ -33,12 +34,23 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerViewDailyInfo"
-        android:layout_width="match_parent"
+        android:layout_width="540px"
         android:layout_height="match_parent"
         android:visibility="visible"
         android:layout_gravity="center_horizontal"
         android:scrollbars="vertical"
         android:fadeScrollbars="true"/>
+
+
+    <TextView
+        android:id="@+id/textViewInfoDisplay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:text="@string/no_missed_rides_currently"
+        android:textColor="@color/black"
+        android:textSize="@dimen/button_text_size" />
 
 
 </LinearLayout>
