--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
@@ -112,7 +112,7 @@
                     android:layout_width="40px"
                     android:layout_height="40px"
                     android:layout_alignParentTop="true"
-                    android:background="@color/transparent">
+                    android:background="@color/new_orange">
 
                 </RelativeLayout>
 
