--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
@@ -23,7 +23,7 @@
             android:orientation="vertical"
             android:splitMotionEvents="false">
 
-            <LinearLayout
+            <RelativeLayout
                 android:id="@+id/driverImageRL"
                 android:layout_width="match_parent"
                 android:layout_height="200px"
@@ -35,7 +35,7 @@
                     android:layout_width="96px"
                     android:layout_height="96px"
                     android:layout_marginLeft="40px"
-                    android:layout_gravity="center_vertical"
+                    android:layout_centerVertical="true"
                     android:splitMotionEvents="false"
                     android:tag="mwar">
 
@@ -59,7 +59,8 @@
                     android:id="@+id/linearLayoutDEI"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
+                    android:layout_centerVertical="true"
+                    android:layout_toRightOf="@+id/profileRl"
                     android:layout_marginTop="10px"
                     android:layout_marginLeft="15px"
                     android:orientation="horizontal"
@@ -68,9 +69,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:orientation="vertical"
-                        >
+                        android:orientation="vertical">
 
                         <TextView
                             android:id="@+id/userName"
@@ -83,16 +82,14 @@
                         <RelativeLayout
                             android:id="@+id/driverRatingRl"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
+                            android:layout_height="50px"
                             android:visibility="visible">
 
                             <RatingBar
                                 android:id="@+id/ratingBarFeedbackSide"
                                 android:layout_width="wrap_content"
-                                android:layout_height="50px"
+                                android:layout_height="40px"
                                 android:layout_marginTop="10px"
-                                android:gravity="center"
                                 android:isIndicator="true"
                                 android:progressDrawable="@drawable/rating_star_white_selector"
                                 android:stepSize="0.5"
@@ -131,8 +128,17 @@
                     </LinearLayout>
                 </LinearLayout>
 
+                <ImageView
+                    android:layout_width="23px"
+                    android:layout_height="14px"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="32px"
+                    android:src="@drawable/arrow_icon_normal"/>
 
-            </LinearLayout>
+
+
+            </RelativeLayout>
 
 
             <RelativeLayout
@@ -265,7 +271,7 @@
                     android:layout_height="35px"
                     android:layout_marginLeft="20px"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/Home_v2"
+                    android:src="@drawable/home_v2"
                     android:tag="mwar"/>
 
                 <TextView
@@ -646,6 +652,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="84px"
                 android:background="@drawable/menu_item_selector"
+                android:visibility="gone"
                 android:splitMotionEvents="false">
 
                 <TextView
