--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_info.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_info.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/linear"
               android:orientation="horizontal"
-              android:layout_width="match_parent"
+              android:layout_gravity="center_horizontal"
+              android:layout_width="wrap_content"
               android:layout_height="match_parent">
 
     <TextView
